# elearning/e-smart-learn/app/dto/plan_dto.go
@@ -8,6 +8,8 @@ type CreatePlanRequest struct {
 	BillingCycle   consts.BillingCycle `json:"billing_cycle" binding:"required,oneof=monthly yearly"`
 	Price          float64             `json:"price" binding:"required"`
 	Currency       *string             `json:"currency" binding:"omitempty,min=3,max=10"`
+	Tag            *string             `json:"tag"`
+	IsRecommend    *bool               `json:"is_recommend"`
 	AccessFeatures []string            `json:"access_features" binding:"omitempty"`
 	IsActive       *bool               `json:"is_active"`
 }
@@ -16,13 +18,16 @@ type UpdatePlanRequest struct {
 	Name           *string              `json:"name" binding:"omitempty,min=2,max=100"`
 	Description    *string              `json:"description"`
 	BillingCycle   *consts.BillingCycle `json:"billing_cycle" binding:"omitempty,oneof=monthly yearly"`
-	Price          *float64             `json:"price" binding:"omitempty,gt=0"`
+	Price          *float64             `json:"price"`
 	Currency       *string              `json:"currency" binding:"omitempty,min=3,max=10"`
+	Tag            *string              `json:"tag"`
+	IsRecommend    *bool                `json:"is_recommend"`
 	AccessFeatures []string             `json:"access_features" binding:"omitempty"`
 }
 
 type ListPlanRequest struct {
 	PagingRequest
 
-	IsActive *bool `form:"is_active,omitempty"`
+	IsActive    *bool `form:"is_active,omitempty"`
+	IsRecommend *bool `form:"is_recommend,omitempty"`
 }
